--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "dev": "nodemon -r dotenv/config app.js"
+    "dev": "nodemon -r dotenv/config app.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --setupFiles dotenv/config --watchAll"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "jest": "^29.2.2",
+    "supertest": "^6.3.1"
   }
 }
